--- a/app/src/main/res/drawable-v24/register_button_background.xml
+++ b/app/src/main/res/drawable-v24/register_button_background.xml
@@ -3,7 +3,7 @@
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
             <corners android:radius="1000dp" />
-            <solid android:color="@color/our_purple" />
+            <solid android:color="@color/purple" />
             <stroke
                 android:width="2dip"
                 android:color="#03ae3c" />
