added search function and fixed issues

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,6 +49,7 @@
         android:drawableStart="@drawable/ic_baseline_mail_24"
         android:drawablePadding="4dp"
         android:ems="10"
+        android:text="aaa"
         android:inputType="textEmailAddress"
         android:textSize="12sp"
         android:maxLength="30"
@@ -66,6 +67,7 @@
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:drawablePadding="4dp"
         android:ems="10"
+        android:text="aaa "
         android:inputType="textPassword"
         android:textSize="12sp"
         android:maxLength="30"
