added a working state to the project

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,10 +49,10 @@
         android:drawableStart="@drawable/ic_baseline_mail_24"
         android:drawablePadding="4dp"
         android:ems="10"
-        android:text="aaa"
         android:inputType="textEmailAddress"
-        android:textSize="12sp"
         android:maxLength="30"
+        android:text="flavius.bumbaru@gmail.com"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.853"
@@ -67,10 +67,10 @@
         android:drawableStart="@drawable/ic_baseline_lock_24"
         android:drawablePadding="4dp"
         android:ems="10"
-        android:text="aaa "
         android:inputType="textPassword"
-        android:textSize="12sp"
         android:maxLength="30"
+        android:text="flaviusisthebest"
+        android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.853"
