--- a/app/src/main/res/layout/activity_add_food.xml
+++ b/app/src/main/res/layout/activity_add_food.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".AddFoodActivity">
 
+
     <Button
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
@@ -13,10 +14,23 @@
         android:text="Save Food"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.173"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.945" />
+        app:layout_constraintVertical_bias="0.944" />
 
+    <Button
+        android:id="@+id/addButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.789"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.944" />
 
     <EditText
         android:id="@+id/nameField"
@@ -409,5 +423,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.946" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
